crypto: omap-aes - Fix PM disable depth imbalance in omap_aes_probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56677,6 +56677,7 @@
 	patches.suse/crypto-talitos-Fix-return-type-of-current_desc_hdr.patch
 	patches.suse/crypto-af_alg-avoid-undefined-behavior-accessing-sal.patch
 	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
+	patches.suse/crypto-omap-aes-Fix-PM-disable-depth-imbalance-in-om.patch
 	patches.suse/mwifiex-fix-mwifiex_shutdown_sw-causing-sw-reset-fai.patch
 	patches.suse/orinoco-Move-context-allocation-after-processing-the.patch
 	patches.suse/cw1200-fix-missing-destroy_workqueue-on-error-in-cw1.patch
