--- a/series.conf
+++ b/series.conf
@@ -56664,6 +56664,7 @@
 	patches.suse/drm-dp_aux_dev-check-aux_dev-before-use-in-drm_dp_au.patch
 	patches.suse/matroxfb-avoid-Warray-bounds-warning.patch
 	patches.suse/drm-amd-display-remove-useless-if-else.patch
+	patches.suse/drm-amdgpu-fix-build_coefficients-argument.patch
 	patches.suse/media-solo6x10-fix-missing-snd_card_free-in-error-ha.patch
 	patches.suse/media-siano-fix-memory-leak-of-debugfs-members-in-sm.patch
 	patches.suse/media-saa7146-fix-array-overflow-in-vidioc_s_audio.patch
