--- a/series.conf
+++ b/series.conf
@@ -56665,6 +56665,7 @@
 	patches.suse/matroxfb-avoid-Warray-bounds-warning.patch
 	patches.suse/drm-amd-display-remove-useless-if-else.patch
 	patches.suse/drm-amdgpu-fix-build_coefficients-argument.patch
+	patches.suse/drm-omap-dmm_tiler-fix-return-error-code-in-omap_dmm.patch
 	patches.suse/media-solo6x10-fix-missing-snd_card_free-in-error-ha.patch
 	patches.suse/media-siano-fix-memory-leak-of-debugfs-members-in-sm.patch
 	patches.suse/media-saa7146-fix-array-overflow-in-vidioc_s_audio.patch
