--- a/series.conf
+++ b/series.conf
@@ -56670,6 +56670,7 @@
 	patches.suse/drm-msm-dpu-Add-newline-to-printks.patch
 	patches.suse/drm-msm-dsi_phy_10nm-implement-PHY-disabling.patch
 	patches.suse/media-mtk-vcodec-add-missing-put_device-call-in-mtk_.patch
+	patches.suse/media-v4l2-async-Fix-trivial-documentation-typo.patch
 	patches.suse/media-solo6x10-fix-missing-snd_card_free-in-error-ha.patch
 	patches.suse/media-siano-fix-memory-leak-of-debugfs-members-in-sm.patch
 	patches.suse/media-saa7146-fix-array-overflow-in-vidioc_s_audio.patch
