--- a/series.conf
+++ b/series.conf
@@ -56667,6 +56667,7 @@
 	patches.suse/drm-amdgpu-fix-build_coefficients-argument.patch
 	patches.suse/drm-omap-dmm_tiler-fix-return-error-code-in-omap_dmm.patch
 	patches.suse/drm-meson-dw-hdmi-Register-a-callback-to-disable-the.patch
+	patches.suse/drm-msm-dpu-Add-newline-to-printks.patch
 	patches.suse/media-solo6x10-fix-missing-snd_card_free-in-error-ha.patch
 	patches.suse/media-siano-fix-memory-leak-of-debugfs-members-in-sm.patch
 	patches.suse/media-saa7146-fix-array-overflow-in-vidioc_s_audio.patch
