crypto: af_alg - avoid undefined behavior accessing salg_name (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56675,6 +56675,7 @@
 	patches.suse/media-siano-fix-memory-leak-of-debugfs-members-in-sm.patch
 	patches.suse/media-saa7146-fix-array-overflow-in-vidioc_s_audio.patch
 	patches.suse/crypto-talitos-Fix-return-type-of-current_desc_hdr.patch
+	patches.suse/crypto-af_alg-avoid-undefined-behavior-accessing-sal.patch
 	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
 	patches.suse/mwifiex-fix-mwifiex_shutdown_sw-causing-sw-reset-fai.patch
 	patches.suse/orinoco-Move-context-allocation-after-processing-the.patch
