scsi: lpfc: Extend the RDF FPIN Registration descriptor for additional events (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -56040,6 +56040,7 @@
 	patches.suse/scsi-qla2xxx-Fix-regression-on-sparc64.patch
 	patches.suse/scsi-lpfc-Fix-setting-IRQ-affinity-with-an-empty-CPU.patch
 	patches.suse/scsi-lpfc-Fix-FLOGI-PLOGI-receive-race-condition-in-.patch
+	patches.suse/scsi-lpfc-Extend-the-RDF-FPIN-Registration-descripto.patch
 	patches.suse/RDMA-rxe-Fix-the-parent-sysfs-read-when-the-interfac.patch
 	patches.suse/RDMA-rxe-Fix-memleak-in-rxe_mem_init_user.patch
 	patches.suse/RDMA-mlx4-Read-pkey-table-length-instead-of-hardcode.patch
