--- a/series.conf
+++ b/series.conf
@@ -56756,6 +56756,7 @@
 	patches.suse/Revert-ACPI-resources-Use-AE_CTRL_TERMINATE-to-termi.patch
 	patches.suse/PCI-Fix-pci_slot_release-NULL-pointer-dereference.patch
 	patches.suse/scsi-Remove-unneeded-break-statements.patch
+	patches.suse/scsi-lpfc-Fix-invalid-sleeping-context-in-lpfc_sli4_.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
