--- a/series.conf
+++ b/series.conf
@@ -56254,6 +56254,7 @@
 	patches.suse/scsi-qla2xxx-Fix-inconsistent-format-argument-type-i.patch
 	patches.suse/scsi-qla2xxx-Fix-inconsistent-format-argument-type-i-250bd009.patch
 	patches.suse/scsi-qla2xxx-Fix-inconsistent-format-argument-type-i-72e813d9.patch
+	patches.suse/scsi-lpfc-Drop-nodelist-reference-on-error-in-lpfc_g.patch
 	patches.suse/leds-mt6323-move-period-calculation.patch
 	patches.suse/leds-bcm6328-bcm6358-use-devres-LED-registering-func.patch
 	patches.suse/mfd-sm501-Fix-leaks-in-probe.patch
