--- a/series.conf
+++ b/series.conf
@@ -56041,6 +56041,7 @@
 	patches.suse/scsi-lpfc-Fix-setting-IRQ-affinity-with-an-empty-CPU.patch
 	patches.suse/scsi-lpfc-Fix-FLOGI-PLOGI-receive-race-condition-in-.patch
 	patches.suse/scsi-lpfc-Extend-the-RDF-FPIN-Registration-descripto.patch
+	patches.suse/scsi-lpfc-Update-lpfc-version-to-12.8.0.4.patch
 	patches.suse/RDMA-rxe-Fix-the-parent-sysfs-read-when-the-interfac.patch
 	patches.suse/RDMA-rxe-Fix-memleak-in-rxe_mem_init_user.patch
 	patches.suse/RDMA-mlx4-Read-pkey-table-length-instead-of-hardcode.patch
