blacklist.conf: update blacklist

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1705,3 +1705,4 @@ a8dd86bf746256fbf68f82bc13356244c5ad8efa # for kernel development
 8d2e77b39b8fecb794e19cd006a12f90b14dd077 # already covered by 46a41b512f6800b531e94bdf5f1ca0e226492d91
 58322a1590fc189a8e1e349d309637d4a4942840 # plainly misattributed, driver not even in this kernel version
 bcee5278958802b40ee8b26679155a6d9231783e # requires prerequisities, not worth it
+7ad342bc58cc5197cd2f12a3c30b3949528c6d83 # net: macb: we don't have hardware PTP support for the driver
