net: macb: fix dropped RX frames due to a race (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -44414,6 +44414,7 @@
 	patches.suse/qed-Fix-an-error-code-qed_ll2_start_xmit.patch
 	patches.suse/net-macb-restart-tx-after-tx-used-bit-read.patch
 	patches.suse/0001-net-macb-fix-random-memory-corruption-on-RX-with-64-.patch
+	patches.suse/0001-net-macb-fix-dropped-RX-frames-due-to-a-race.patch
 	patches.suse/vxlan-Unmark-offloaded-bit-on-replaced-FDB-entries.patch
 	patches.suse/lan78xx-Resolve-issue-with-changing-MAC-address.patch
 	patches.suse/net-phy-Fix-the-issue-that-netif-always-links-up-aft.patch
