--- a/series.conf
+++ b/series.conf
@@ -44415,6 +44415,7 @@
 	patches.suse/net-macb-restart-tx-after-tx-used-bit-read.patch
 	patches.suse/0001-net-macb-fix-random-memory-corruption-on-RX-with-64-.patch
 	patches.suse/0001-net-macb-fix-dropped-RX-frames-due-to-a-race.patch
+	patches.suse/0002-net-macb-add-missing-barriers-when-reading-descripto.patch
 	patches.suse/vxlan-Unmark-offloaded-bit-on-replaced-FDB-entries.patch
 	patches.suse/lan78xx-Resolve-issue-with-changing-MAC-address.patch
 	patches.suse/net-phy-Fix-the-issue-that-netif-always-links-up-aft.patch
