--- a/series.conf
+++ b/series.conf
@@ -50332,6 +50332,7 @@
 	patches.suse/Bluetooth-Add-SMP-workaround-Microsoft-Surface-Preci.patch
 	patches.suse/Bluetooth-6lowpan-search-for-destination-address-in-.patch
 	patches.suse/sfc-Remove-PCIE-error-reporting-unavailable.patch
+	patches.suse/0003-net-pasemi-fix-an-use-after-free-in-pasemi_mac_phy_i.patch
 	patches.suse/tools-bpftool-Fix-json-dump-crash-on-powerpc.patch
 	patches.suse/xdp-fix-race-on-generic-receive-path.patch
 	patches.suse/mwifiex-Don-t-abort-on-small-spec-compliant-vendor-I.patch
