--- a/series.conf
+++ b/series.conf
@@ -50958,6 +50958,7 @@
 	patches.suse/sky2-Disable-MSI-on-ASUS-P6T.patch
 	patches.suse/can-dev-call-netif_carrier_off-in-register_candev.patch
 	patches.suse/0003-can-rcar_canfd-fix-possible-IRQ-storm-on-high-load.patch
+	patches.suse/0004-can-mcp251x-add-error-check-when-wq-alloc-failed.patch
 	patches.suse/0004-can-peak_usb-fix-potential-double-kfree_skb.patch
 	patches.suse/netrom-hold-sock-when-setting-skb-destructor.patch
 	patches.suse/ife-error-out-when-nla-attributes-are-empty.patch
