ravb: Fix use-after-free ravb_tstamp_skb (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51121,6 +51121,7 @@
 	patches.suse/bnxt_en-Fix-to-include-flow-direction-in-L2-key.patch
 	patches.suse/ibmvnic-Unmap-DMA-address-of-TX-descriptor-buffers-a.patch
 	patches.suse/wimax-i2400m-fix-a-memory-leak-bug.patch
+	patches.suse/0005-ravb-Fix-use-after-free-ravb_tstamp_skb.patch
 	patches.suse/0001-HID-wacom-Correct-distance-scale-for-2nd-gen-Intuos-.patch
 	patches.suse/HID-cp2112-prevent-sleeping-function-called-from-inv.patch
 	patches.suse/0001-HID-wacom-correct-misreported-EKR-ring-values.patch
