net:ethernet:aquantia: Extra spinlocks removed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6392,6 +6392,7 @@
 	patches.suse/xfrm_user-fix-info-leak-in-copy_user_offload.patch
 	patches.suse/xfrm_user-fix-info-leak-in-xfrm_notify_sa.patch
 	patches.suse/xfrm_user-fix-info-leak-in-build_aevent.patch
+	patches.suse/0006-net-ethernet-aquantia-Extra-spinlocks-removed.patch
 	patches.suse/nfp-double-free-on-error-in-probe.patch
 	patches.suse/drivers-net-xgene-Correct-probe-sequence-handling.patch
 	patches.suse/sch_htb-fix-crash-on-init-failure.patch
