--- a/series.conf
+++ b/series.conf
@@ -51234,6 +51234,7 @@
 	patches.suse/batman-adv-Only-read-OGM-tvlv_len-after-buffer-len-c.patch
 	patches.suse/batman-adv-Only-read-OGM2-tvlv_len-after-buffer-len-.patch
 	patches.suse/net-sched-cbs-Set-default-link-speed-to-10-Mbps-in-c.patch
+	patches.suse/0007-net-seeq-Fix-the-function-used-to-release-some-memor.patch
 	patches.suse/usb-chipidea-udc-don-t-do-hardware-access-if-gadget-.patch
 	patches.suse/usb-storage-Add-new-JMS567-revision-to-unusual_devs.patch
 	patches.suse/usb-host-ohci-fix-a-race-condition-between-shutdown-.patch
