--- a/series.conf
+++ b/series.conf
@@ -51277,6 +51277,7 @@
 	patches.suse/tipc-add-NULL-pointer-check-before-calling-kfree_rcu.patch
 	patches.suse/net-sock_map-fix-missing-ulp-check-in-sock-hash-case.patch
 	patches.suse/0008-net-sonic-return-NETDEV_TX_OK-if-failed-to-map-buffe.patch
+	patches.suse/0009-forcedeth-use-per-cpu-to-collect-xmit-recv-statistic.patch
 	patches.suse/net-sched-fix-reordering-issues.patch
 	patches.suse/mwifiex-Fix-three-heap-overflow-at-parsing-element.patch
 	patches.suse/net-phylink-Fix-flow-control-resolution.patch
