--- a/series.conf
+++ b/series.conf
@@ -51288,6 +51288,7 @@
 	patches.suse/bridge-mdb-remove-wrong-use-of-NLM_F_MULTI.patch
 	patches.suse/sch_hhf-ensure-quantum-and-hhf_non_hh_weight-are-non.patch
 	patches.suse/wimax-i2400-fix-memory-leak.patch
+	patches.suse/0010-net-sonic-replace-dev_kfree_skb-in-sonic_send_packet.patch
 	patches.suse/mac80211-Do-not-send-Layer-2-Update-frame-before-aut.patch
 	patches.suse/tcp-fix-tcp_ecn_withdraw_cwr-to-clear-TCP_ECN_QUEUE_.patch
 	patches.suse/ixgbe-Prevent-u8-wrapping-of-ITR-value-to-something-.patch
