--- a/series.conf
+++ b/series.conf
@@ -56762,6 +56762,7 @@
 	patches.suse/scsi-lpfc-Fix-duplicate-wq_create_version-check.patch
 	patches.suse/scsi-lpfc-Enlarge-max_sectors-in-scsi-host-templates.patch
 	patches.suse/scsi-lpfc-Add-FDMI-Vendor-MIB-support.patch
+	patches.suse/scsi-lpfc-Reject-CT-request-for-MIB-commands.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
