--- a/series.conf
+++ b/series.conf
@@ -56787,6 +56787,7 @@
 	patches.suse/scsi-lpfc-Update-changed-file-copyrights-for-2020.patch
 	patches.suse/scsi-lpfc-Fix-pointer-defereference-before-it-is-nul.patch
 	patches.suse/scsi-lpfc-Remove-dead-code-on-second-ndlp-check.patch
+	patches.suse/scsi-lpfc-Fix-memory-leak-on-lcb_context.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
