--- a/series.conf
+++ b/series.conf
@@ -56794,6 +56794,7 @@
 	patches.suse/scsi-lpfc-Fix-missing-prototype-for-lpfc_nvmet_prep_.patch
 	patches.suse/scsi-lpfc-Fix-variable-vport-set-but-not-used-in-lpf.patch
 	patches.suse/scsi-lpfc-Use-generic-power-management.patch
+	patches.suse/scsi-lpfc-Correct-null-ndlp-reference-on-routine-exi.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
