scsi: lpfc: Fix missing prototype warning for lpfc_fdmi_vendor_attr_mi() (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -56788,6 +56788,7 @@
 	patches.suse/scsi-lpfc-Fix-pointer-defereference-before-it-is-nul.patch
 	patches.suse/scsi-lpfc-Remove-dead-code-on-second-ndlp-check.patch
 	patches.suse/scsi-lpfc-Fix-memory-leak-on-lcb_context.patch
+	patches.suse/scsi-lpfc-Fix-missing-prototype-warning-for-lpfc_fdm.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
