--- a/series.conf
+++ b/series.conf
@@ -56785,6 +56785,7 @@
 	patches.suse/scsi-lpfc-Convert-abort-handling-to-SLI-3-and-SLI-4-.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-12.8.0.6.patch
 	patches.suse/scsi-lpfc-Update-changed-file-copyrights-for-2020.patch
+	patches.suse/scsi-lpfc-Fix-pointer-defereference-before-it-is-nul.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
