--- a/series.conf
+++ b/series.conf
@@ -56778,6 +56778,7 @@
 	patches.suse/scsi-lpfc-Fix-NPIV-discovery-and-Fabric-Node-detecti.patch
 	patches.suse/scsi-lpfc-Fix-NPIV-Fabric-Node-reference-counting.patch
 	patches.suse/scsi-lpfc-Refactor-WQE-structure-definitions-for-com.patch
+	patches.suse/scsi-lpfc-Enable-common-wqe_template-support-for-bot.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
