scsi: lpfc: Convert abort handling to SLI-3 and SLI-4 handlers (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -56782,6 +56782,7 @@
 	patches.suse/scsi-lpfc-Enable-common-send_io-interface-for-SCSI-a.patch
 	patches.suse/scsi-lpfc-Convert-SCSI-path-to-use-common-I-O-submis.patch
 	patches.suse/scsi-lpfc-Convert-SCSI-I-O-completions-to-SLI-3-and-.patch
+	patches.suse/scsi-lpfc-Convert-abort-handling-to-SLI-3-and-SLI-4-.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
