--- a/series.conf
+++ b/series.conf
@@ -56777,6 +56777,7 @@
 	patches.suse/scsi-lpfc-Unsolicited-ELS-leaves-node-in-incorrect-s.patch
 	patches.suse/scsi-lpfc-Fix-NPIV-discovery-and-Fabric-Node-detecti.patch
 	patches.suse/scsi-lpfc-Fix-NPIV-Fabric-Node-reference-counting.patch
+	patches.suse/scsi-lpfc-Refactor-WQE-structure-definitions-for-com.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
