--- a/series.conf
+++ b/series.conf
@@ -56770,6 +56770,7 @@
 	patches.suse/scsi-lpfc-lpfc_debugfs-Fix-a-couple-of-function-docu.patch
 	patches.suse/scsi-lpfc-Rework-remote-port-ref-counting-and-node-f.patch
 	patches.suse/scsi-lpfc-Rework-locations-of-ndlp-reference-taking.patch
+	patches.suse/scsi-lpfc-Fix-removal-of-SCSI-transport-device-get-a.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
