scsi: lpfc: lpfc_attr: Demote kernel-doc format for redefined functions (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -56765,6 +56765,7 @@
 	patches.suse/scsi-lpfc-Reject-CT-request-for-MIB-commands.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-12.8.0.5.patch
 	patches.suse/scsi-lpfc-lpfc_scsi-Fix-a-whole-host-of-kernel-doc-i.patch
+	patches.suse/scsi-lpfc-lpfc_attr-Demote-kernel-doc-format-for-red.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
