scsi: lpfc: Convert SCSI path to use common I/O submission path (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -56780,6 +56780,7 @@
 	patches.suse/scsi-lpfc-Refactor-WQE-structure-definitions-for-com.patch
 	patches.suse/scsi-lpfc-Enable-common-wqe_template-support-for-bot.patch
 	patches.suse/scsi-lpfc-Enable-common-send_io-interface-for-SCSI-a.patch
+	patches.suse/scsi-lpfc-Convert-SCSI-path-to-use-common-I-O-submis.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
