scsi: lpfc: Enlarge max_sectors in scsi host templates (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -56760,6 +56760,7 @@
 	patches.suse/scsi-lpfc-Fix-scheduling-call-while-in-softirq-conte.patch
 	patches.suse/scsi-lpfc-Removed-unused-macros-in-lpfc_attr.c.patch
 	patches.suse/scsi-lpfc-Fix-duplicate-wq_create_version-check.patch
+	patches.suse/scsi-lpfc-Enlarge-max_sectors-in-scsi-host-templates.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
