scsi: lpfc: Unsolicited ELS leaves node in incorrect state while dropping it (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -56774,6 +56774,7 @@
 	patches.suse/scsi-lpfc-Fix-refcounting-around-SCSI-and-NVMe-trans.patch
 	patches.suse/scsi-lpfc-Rework-remote-port-lock-handling.patch
 	patches.suse/scsi-lpfc-Remove-ndlp-when-a-PLOGI-ADISC-PRLI-REG_RP.patch
+	patches.suse/scsi-lpfc-Unsolicited-ELS-leaves-node-in-incorrect-s.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
