scsi: lpfc: Rework remote port lock handling (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -56772,6 +56772,7 @@
 	patches.suse/scsi-lpfc-Rework-locations-of-ndlp-reference-taking.patch
 	patches.suse/scsi-lpfc-Fix-removal-of-SCSI-transport-device-get-a.patch
 	patches.suse/scsi-lpfc-Fix-refcounting-around-SCSI-and-NVMe-trans.patch
+	patches.suse/scsi-lpfc-Rework-remote-port-lock-handling.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
