scsi: lpfc: Fix variable 'vport' set but not used in lpfc_sli4_abts_err_handler() (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -56792,6 +56792,7 @@
 	patches.suse/scsi-lpfc-Fix-set-but-not-used-warnings-from-Rework-.patch
 	patches.suse/scsi-lpfc-Fix-set-but-unused-variables-in-lpfc_dev_l.patch
 	patches.suse/scsi-lpfc-Fix-missing-prototype-for-lpfc_nvmet_prep_.patch
+	patches.suse/scsi-lpfc-Fix-variable-vport-set-but-not-used-in-lpf.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
