--- a/series.conf
+++ b/series.conf
@@ -56767,6 +56767,7 @@
 	patches.suse/scsi-lpfc-lpfc_scsi-Fix-a-whole-host-of-kernel-doc-i.patch
 	patches.suse/scsi-lpfc-lpfc_attr-Demote-kernel-doc-format-for-red.patch
 	patches.suse/scsi-lpfc-lpfc_attr-Fix-up-a-bunch-of-kernel-doc-mis.patch
+	patches.suse/scsi-lpfc-lpfc_debugfs-Fix-a-couple-of-function-docu.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
