scsi: lpfc: Fix set but unused variables in lpfc_dev_loss_tmo_handler() (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -56790,6 +56790,7 @@
 	patches.suse/scsi-lpfc-Fix-memory-leak-on-lcb_context.patch
 	patches.suse/scsi-lpfc-Fix-missing-prototype-warning-for-lpfc_fdm.patch
 	patches.suse/scsi-lpfc-Fix-set-but-not-used-warnings-from-Rework-.patch
+	patches.suse/scsi-lpfc-Fix-set-but-unused-variables-in-lpfc_dev_l.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
