scsi: qla2xxx: remove incorrect sparse #ifdef (bsc#1172538 bsc#1179142 bsc#1179810).

--- a/series.conf
+++ b/series.conf
@@ -56484,6 +56484,7 @@
 	patches.suse/nvme-rdma-fix-crash-when-connect-rejected.patch
 	patches.suse/nvme-rdma-fix-crash-due-to-incorrect-cqe.patch
 	patches.suse/NTB-hw-amd-fix-an-issue-about-leak-system-resources.patch
+	patches.suse/scsi-qla2xxx-remove-incorrect-sparse-ifdef.patch
 	patches.suse/x86-kexec-Use-up-to-dated-screen_info-copy-to-fill-b.patch
 	patches.suse/msft-hv-2164-hyperv_fb-Update-screen_info-after-removing-old-fram.patch
 	patches.suse/x86-unwind-orc-fix-inactive-tasks-with-stack-pointer-in-sp-on-gcc-10-compiled-kernels.patch
