scsi: qla2xxx: Remove trailing semicolon in macro definition (bsc#1172538 bsc#1179142 bsc#1179810).

--- a/series.conf
+++ b/series.conf
@@ -56809,6 +56809,7 @@
 	patches.suse/scsi-qla2xxx-Remove-in_interrupt-from-qla83xx-specif.patch
 	patches.suse/scsi-lpfc-Correct-null-ndlp-reference-on-routine-exi.patch
 	patches.suse/scsi-lpfc-Fix-fall-through-warnings-for-Clang.patch
+	patches.suse/scsi-qla2xxx-Remove-trailing-semicolon-in-macro-defi.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
