--- a/series.conf
+++ b/series.conf
@@ -56502,6 +56502,7 @@
 	patches.suse/device-property-Keep-secondary-firmware-node-seconda.patch
 	patches.suse/device-property-Don-t-clear-secondary-pointer-for-sh.patch
 	patches.suse/btrfs-fix-use-after-free-on-readahead-extent-after-f.patch
+	patches.suse/scsi-qla2xxx-Return-EBUSY-on-fcport-deletion.patch
 	patches.suse/scsi-ibmvscsi-Fix-potential-race-after-loss-of-trans.patch
 	patches.suse/usb-host-fsl-mph-dr-of-check-return-of-dma_set_mask.patch
 	patches.suse/usb-cdc-acm-fix-cooldown-mechanism.patch
