--- a/series.conf
+++ b/series.conf
@@ -56820,6 +56820,7 @@
 	patches.suse/scsi-qla2xxx-Fix-N2N-and-NVMe-connect-retry-failure.patch
 	patches.suse/scsi-qla2xxx-Handle-aborts-correctly-for-port-underg.patch
 	patches.suse/scsi-qla2xxx-Fix-flash-update-in-28XX-adapters-on-bi.patch
+	patches.suse/scsi-qla2xxx-Fix-the-call-trace-for-flush-workqueue.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
