--- a/series.conf
+++ b/series.conf
@@ -56822,6 +56822,7 @@
 	patches.suse/scsi-qla2xxx-Fix-flash-update-in-28XX-adapters-on-bi.patch
 	patches.suse/scsi-qla2xxx-Fix-the-call-trace-for-flush-workqueue.patch
 	patches.suse/scsi-qla2xxx-If-fcport-is-undergoing-deletion-comple.patch
+	patches.suse/scsi-qla2xxx-Fix-device-loss-on-4G-and-older-HBAs.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
