scsi: qla2xxx: Fix compilation issue in PPC systems (bsc#1172538 bsc#1179142 bsc#1179810).

--- a/series.conf
+++ b/series.conf
@@ -56814,6 +56814,7 @@
 	patches.suse/scsi-qla2xxx-Limit-interrupt-vectors-to-number-of-CP.patch
 	patches.suse/scsi-qla2xxx-Tear-down-session-if-FW-say-it-is-down.patch
 	patches.suse/scsi-qla2xxx-Don-t-check-for-fw_started-while-postin.patch
+	patches.suse/scsi-qla2xxx-Fix-compilation-issue-in-PPC-systems.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
