--- a/series.conf
+++ b/series.conf
@@ -56804,6 +56804,7 @@
 	patches.suse/scsi-lpfc-Fix-missing-prototype-for-lpfc_nvmet_prep_.patch
 	patches.suse/scsi-lpfc-Fix-variable-vport-set-but-not-used-in-lpf.patch
 	patches.suse/scsi-lpfc-Use-generic-power-management.patch
+	patches.suse/scsi-qla2xxx-Remove-in_interrupt-from-qla82xx-specif.patch
 	patches.suse/scsi-lpfc-Correct-null-ndlp-reference-on-routine-exi.patch
 	patches.suse/scsi-lpfc-Fix-fall-through-warnings-for-Clang.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
