--- a/series.conf
+++ b/series.conf
@@ -56819,6 +56819,7 @@
 	patches.suse/scsi-qla2xxx-Fix-FW-initialization-error-on-big-endi.patch
 	patches.suse/scsi-qla2xxx-Fix-N2N-and-NVMe-connect-retry-failure.patch
 	patches.suse/scsi-qla2xxx-Handle-aborts-correctly-for-port-underg.patch
+	patches.suse/scsi-qla2xxx-Fix-flash-update-in-28XX-adapters-on-bi.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
