--- a/series.conf
+++ b/series.conf
@@ -56816,6 +56816,7 @@
 	patches.suse/scsi-qla2xxx-Don-t-check-for-fw_started-while-postin.patch
 	patches.suse/scsi-qla2xxx-Fix-compilation-issue-in-PPC-systems.patch
 	patches.suse/scsi-qla2xxx-Fix-crash-during-driver-load-on-big-end.patch
+	patches.suse/scsi-qla2xxx-Fix-FW-initialization-error-on-big-endi.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
