--- a/series.conf
+++ b/series.conf
@@ -56813,6 +56813,7 @@
 	patches.suse/scsi-qla2xxx-Change-post-del-message-from-debug-leve.patch
 	patches.suse/scsi-qla2xxx-Limit-interrupt-vectors-to-number-of-CP.patch
 	patches.suse/scsi-qla2xxx-Tear-down-session-if-FW-say-it-is-down.patch
+	patches.suse/scsi-qla2xxx-Don-t-check-for-fw_started-while-postin.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
