- btrfs: add a flag to iterate_inodes_from_logical to find all extent refs for uncompressed extents (bsc#1174206).
- Refresh
  patches.suse/revert-btrfs-qgroup-move-half-of-the-qgroup-accounting-time-out-of-commit-trans.patch.

--- a/series.conf
+++ b/series.conf
@@ -12489,6 +12489,7 @@
 	patches.suse/0020-btrfs-remove-type-argument-from-comp_tree_refs.patch
 	patches.suse/0013-btrfs-add-assertions-for-releasing-trans-handle-reservations.patch
 	patches.suse/0016-btrfs-cleanup-extent-locking-sequence.patch
+	patches.suse/0001-btrfs-add-a-flag-to-iterate_inodes_from_logical-to-f.patch
 	patches.suse/0017-Btrfs-rework-outstanding_extents.patch
 	patches.suse/0018-btrfs-add-tracepoints-for-outstanding-extents-mods.patch
 	patches.suse/0019-btrfs-make-the-delalloc-block-rsv-per-inode.patch
