btrfs: add a flags argument to LOGICAL_INO and call it LOGICAL_INO_V2 (bsc#1174206).

--- a/series.conf
+++ b/series.conf
@@ -12434,6 +12434,7 @@
 	patches.suse/0013-btrfs-add-assertions-for-releasing-trans-handle-reservations.patch
 	patches.suse/0016-btrfs-cleanup-extent-locking-sequence.patch
 	patches.suse/0001-btrfs-add-a-flag-to-iterate_inodes_from_logical-to-f.patch
+	patches.suse/0001-btrfs-add-a-flags-argument-to-LOGICAL_INO-and-call-i.patch
 	patches.suse/0017-Btrfs-rework-outstanding_extents.patch
 	patches.suse/0018-btrfs-add-tracepoints-for-outstanding-extents-mods.patch
 	patches.suse/0019-btrfs-make-the-delalloc-block-rsv-per-inode.patch
