--- a/series.conf
+++ b/series.conf
@@ -56848,6 +56848,7 @@
 	patches.suse/drivers-soc-ti-knav_qmss_queue-Fix-error-return-code.patch
 	patches.suse/pwm-lp3943-Dynamically-allocate-PWM-chip-base.patch
 	patches.suse/HSI-omap_ssi-Don-t-jump-to-free-ID-in-ssi_add_contro.patch
+	patches.suse/power-supply-bq24190_charger-fix-reference-leak.patch
 
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
