--- a/series.conf
+++ b/series.conf
@@ -56846,6 +56846,7 @@
 	patches.suse/soc-ti-knav_qmss-fix-reference-leak-in-knav_queue_pr.patch
 	patches.suse/soc-ti-Fix-reference-imbalance-in-knav_dma_probe.patch
 	patches.suse/drivers-soc-ti-knav_qmss_queue-Fix-error-return-code.patch
+	patches.suse/pwm-lp3943-Dynamically-allocate-PWM-chip-base.patch
 
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
