inet_ecn: Fix endianness of checksum update when setting ECT(1) (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56660,6 +56660,7 @@
 	patches.suse/ibmvnic-avoid-memset-null-scrq-msgs.patch
 	patches.suse/ibmvnic-restore-adapter-state-on-failed-reset.patch
 	patches.suse/ibmvnic-delay-next-reset-if-hard-reset-fails.patch
+	patches.suse/inet_ecn-Fix-endianness-of-checksum-update-when-sett.patch
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
 	patches.suse/drm-rockchip-Avoid-uninitialized-use-of-endpoint-id-.patch
 	patches.suse/msft-hv-2173-scsi-storvsc-Fix-error-return-in-storvsc_probe.patch
