HSI: omap_ssi: Don't jump to free ID in ssi_add_controller() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56847,6 +56847,7 @@
 	patches.suse/soc-ti-Fix-reference-imbalance-in-knav_dma_probe.patch
 	patches.suse/drivers-soc-ti-knav_qmss_queue-Fix-error-return-code.patch
 	patches.suse/pwm-lp3943-Dynamically-allocate-PWM-chip-base.patch
+	patches.suse/HSI-omap_ssi-Don-t-jump-to-free-ID-in-ssi_add_contro.patch
 
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
