--- a/series.conf
+++ b/series.conf
@@ -56715,6 +56715,7 @@
 	patches.suse/ath10k-Release-some-resources-in-an-error-handling-p.patch
 	patches.suse/ibmvnic-add-some-debugs.patch
 	patches.suse/Bluetooth-Fix-null-pointer-dereference-in-hci_event_.patch
+	patches.suse/Bluetooth-Fix-slab-out-of-bounds-read-in-hci_le_dire.patch
 	patches.suse/Bluetooth-btusb-Fix-detection-of-some-fake-CSR-contr.patch
 	patches.suse/mac80211-don-t-set-set-TDLS-STA-bandwidth-wider-than.patch
 	patches.suse/nfc-s3fwrn5-Release-the-nfc-firmware.patch
