rtc: hym8563: enable wakeup when applicable (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56849,6 +56849,7 @@
 	patches.suse/pwm-lp3943-Dynamically-allocate-PWM-chip-base.patch
 	patches.suse/HSI-omap_ssi-Don-t-jump-to-free-ID-in-ssi_add_contro.patch
 	patches.suse/power-supply-bq24190_charger-fix-reference-leak.patch
+	patches.suse/rtc-hym8563-enable-wakeup-when-applicable.patch
 
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
