blacklist.conf: ff17bbe0bb40 x86/vdso: Prevent segfaults due to hoisted vclock reads
Signed-off-by: Borislav Petkov <bp@suse.de>

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1706,3 +1706,4 @@ a8dd86bf746256fbf68f82bc13356244c5ad8efa # for kernel development
 58322a1590fc189a8e1e349d309637d4a4942840 # plainly misattributed, driver not even in this kernel version
 bcee5278958802b40ee8b26679155a6d9231783e # requires prerequisities, not worth it
 8a652a17e3c005dcdae31b6c8fdf14382a29cbbe # uvcvideo: caused a regression (bsc#1180117)
+ff17bbe0bb405ad8b36e55815d381841f9fdeebc # we don't use gcc 5.5 for this kernel
