--- a/series.conf
+++ b/series.conf
@@ -56706,6 +56706,7 @@
 	patches.suse/crypto-af_alg-avoid-undefined-behavior-accessing-sal.patch
 	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
 	patches.suse/crypto-omap-aes-Fix-PM-disable-depth-imbalance-in-om.patch
+	patches.suse/mm-memory_failure-always-pin-the-page-in-madvise_inj.patch
 	patches.suse/wimax-fix-duplicate-initializer-warning.patch
 	patches.suse/mwifiex-fix-mwifiex_shutdown_sw-causing-sw-reset-fai.patch
 	patches.suse/orinoco-Move-context-allocation-after-processing-the.patch
