--- a/series.conf
+++ b/series.conf
@@ -57020,6 +57020,7 @@
 	patches.suse/tty-Fix-session-locking.patch
 	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
+	patches.suse/edac-i10nm-use-readl-to-access-mmio-registers.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
