--- a/series.conf
+++ b/series.conf
@@ -49928,6 +49928,7 @@
 	patches.suse/perf-core-fix-perf_sample_regs_user-mm-check.patch
 	patches.suse/perf-ioctl-add-check-for-the-sample_period-value.patch
 	patches.suse/x86-microcode-fix-the-microcode-load-on-cpu-hotplug-for-real.patch
+	patches.suse/x86-apic-fix-integer-overflow-on-10-bit-left-shift-of-cpu_khz.patch
 	patches.suse/x86-speculation-allow-guests-to-use-ssbd-even-if-host-does-not.patch
 	patches.suse/cpu-speculation-warn-on-unsupported-mitigations-parameter.patch
 	patches.suse/cifs-fix-crash-querying-symlinks-stored-as-reparse-points.patch
