--- a/series.conf
+++ b/series.conf
@@ -16664,6 +16664,7 @@
 	patches.suse/x86-mm-ident_map-check-for-errors-from-ident_pud_init.patch
 	patches.suse/seqlock-avoid-Wshadow-warnings.patch
 	patches.suse/Documentation-seqlock-s-LOCKTYPE-LOCKNAME-g.patch
+	patches.suse/timers-Don-t-block-on-expiry_lock-for-TIMER_IRQSAFE-.patch
 	patches.suse/wimax-fix-duplicate-initializer-warning.patch
 	patches.suse/mwifiex-fix-mwifiex_shutdown_sw-causing-sw-reset-fai.patch
 	patches.suse/orinoco-Move-context-allocation-after-processing-the.patch
