--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1710,3 +1710,4 @@ bcee5278958802b40ee8b26679155a6d9231783e # requires prerequisities, not worth it
 e5785d3ec32f5f44dd88cd7b398e496742630469 # already fixed by 9816ef6ecbc102b9bcbb1d83e12c7fb19924f38c
 ff17bbe0bb405ad8b36e55815d381841f9fdeebc # we don't use gcc 5.5 for this kernel
 3d51507f29f2153a658df4a0674ec5b592b62085 # 32-bit only
+862ee699fefe1e6d6f2c1518395f0b999b8beb15 # not relevant in our config
