USB: serial: digi_acceleport: remove redundant assignment to pointer priv (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54200,6 +54200,7 @@
 	patches.suse/media-xirlink_cit-add-missing-descriptor-sanity-chec.patch
 	patches.suse/0001-usb-gadget-composite-Inform-controller-driver-of-sel.patch
 	patches.suse/usb-musb-fix-crash-with-highmen-PIO-and-usbmon.patch
+	patches.suse/USB-serial-digi_acceleport-remove-redundant-assignme.patch
 	patches.suse/0001-USB-serial-option-add-support-for-ASKEY-WWHC050.patch
 	patches.suse/0001-USB-serial-option-add-BroadMobi-BM806U.patch
 	patches.suse/0001-USB-serial-option-add-Wistron-Neweb-D19Q1.patch
