USB: serial: digi_acceleport: remove in_interrupt() usage.

--- a/series.conf
+++ b/series.conf
@@ -56734,6 +56734,7 @@
 	patches.suse/usb-chipidea-ci_hdrc_imx-Pass-DISABLE_DEVICE_STREAMI.patch
 	patches.suse/usb-ehci-omap-Fix-PM-disable-depth-umbalance-in-ehci.patch
 	patches.suse/usb-oxu210hp-hcd-Fix-memory-leak-in-oxu_create.patch
+	patches.suse/USB-serial-digi_acceleport-remove-in_interrupt-usage.patch
 	patches.suse/USB-serial-keyspan_pda-fix-dropped-unthrottle-interr.patch
 	patches.suse/USB-serial-keyspan_pda-fix-write-deadlock.patch
 	patches.suse/USB-serial-keyspan_pda-fix-stalled-writes.patch
