- USB: serial: digi_acceleport: use irqsave() in USB's complete   callback (git-fixes). - Refresh   patches.suse/USB-serial-digi_acceleport-remove-redundant-assignme.patch.

--- a/series.conf
+++ b/series.conf
@@ -39621,6 +39621,7 @@
 	patches.suse/uwb-hwa-rc-fix-memory-leak-at-probe.patch
 	patches.suse/0001-usb-typec-unlock-dp-lock-on-error-exit-path-and-also.patch
 	patches.suse/0001-usb-typec-avoid-format-overflow-warning.patch
+	patches.suse/USB-serial-digi_acceleport-use-irqsave-in-USB-s-comp.patch
 	patches.suse/USB-serial-io_edgeport-use-irqsave-in-USB-s-complete.patch
 	patches.suse/USB-serial-sierra-fix-potential-deadlock-at-close.patch
 	patches.suse/USB-serial-kobil_sct-fix-modem-status-error-handling.patch
