USB: serial: digi_acceleport: rename tty flag variable (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -39624,6 +39624,7 @@
 	patches.suse/USB-serial-digi_acceleport-use-irqsave-in-USB-s-comp.patch
 	patches.suse/USB-serial-io_edgeport-use-irqsave-in-USB-s-complete.patch
 	patches.suse/USB-serial-sierra-fix-potential-deadlock-at-close.patch
+	patches.suse/USB-serial-digi_acceleport-rename-tty-flag-variable.patch
 	patches.suse/USB-serial-kobil_sct-fix-modem-status-error-handling.patch
 	patches.suse/0094-phy-mvebu-cp110-comphy-switch-to-SPDX-identifier.patch
 	patches.suse/USB-option-add-support-for-DW5821e
