USB: serial: digi_acceleport: clean up modem-control handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -48870,6 +48870,7 @@
 	patches.suse/USB-cdc-acm-fix-unthrottle-races.patch
 	patches.suse/0001-UAS-fix-alignment-of-scatter-gather-segments.patch
 	patches.suse/0001-USB-serial-pl2303-fix-tranceiver-suspend-mode.patch
+	patches.suse/USB-serial-digi_acceleport-clean-up-modem-control-ha.patch
 	patches.suse/0001-USB-serial-fix-initial-termios-handling.patch
 	patches.suse/USB-serial-fix-unthrottle-races.patch
 	patches.suse/USB-serial-f81232-fix-interrupt-worker-not-stop.patch
