--- a/series.conf
+++ b/series.conf
@@ -56745,6 +56745,7 @@
 	patches.suse/USB-serial-keyspan_pda-fix-write-wakeup-use-after-fr.patch
 	patches.suse/USB-serial-keyspan_pda-fix-tx-unthrottle-use-after-f.patch
 	patches.suse/USB-serial-keyspan_pda-fix-write-unthrottling.patch
+	patches.suse/USB-serial-digi_acceleport-fix-write-wakeup-deadlock.patch
 	patches.suse/USB-serial-mos7720-fix-parallel-port-state-restore.patch
 	patches.suse/USB-serial-option-add-interface-number-sanity-check-.patch
 	patches.suse/serial-8250_omap-Avoid-FIFO-corruption-caused-by-MDR.patch
