--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1711,3 +1711,4 @@ e5785d3ec32f5f44dd88cd7b398e496742630469 # already fixed by 9816ef6ecbc102b9bcbb
 ff17bbe0bb405ad8b36e55815d381841f9fdeebc # we don't use gcc 5.5 for this kernel
 3d51507f29f2153a658df4a0674ec5b592b62085 # 32-bit only
 862ee699fefe1e6d6f2c1518395f0b999b8beb15 # not relevant in our config
+5af8be6b0c7e49124cd04ad144d3aae615e3daea # already fixed by 2a72c46ac4d665614faa25e267c3fb27fb729ed7
