--- a/series.conf
+++ b/series.conf
@@ -54257,6 +54257,7 @@
 	patches.suse/0002-btrfs-relocation-Check-cancel-request-after-each-dat.patch
 	patches.suse/0003-btrfs-relocation-Check-cancel-request-after-each-ext.patch
 	patches.suse/btrfs-account-ticket-size-at-add-delete-time.patch
+	patches.suse/btrfs-remove-a-BUG_ON-from-merge_reloc_roots.patch
 	patches.suse/cifs-do-not-ignore-the-SYNC-flags-in-getattr.patch
 	patches.suse/cifs-handle-prefix-paths-in-reconnect.patch
 	patches.suse/cifs-call-wake_up-server-response_q-inside-of-cifs_r.patch
