ibmvnic: fix: NULL pointer dereference (bsc#1044767 ltc#155231 git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56893,6 +56893,7 @@
 	patches.suse/rpadlpar_io-Add-MODULE_DESCRIPTION-entries-to-kernel.patch
 	patches.suse/0004-ocfs2-give-applications-more-IO-opportunities-during.patch
 	patches.suse/cifs-set_root_ses-ipc.patch
+	patches.suse/ibmvnic-fix-NULL-pointer-dereference.patch
 
 	########################################################
 	# end of sorted patches
