--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1712,3 +1712,4 @@ ff17bbe0bb405ad8b36e55815d381841f9fdeebc # we don't use gcc 5.5 for this kernel
 3d51507f29f2153a658df4a0674ec5b592b62085 # 32-bit only
 862ee699fefe1e6d6f2c1518395f0b999b8beb15 # not relevant in our config
 5af8be6b0c7e49124cd04ad144d3aae615e3daea # already fixed by 2a72c46ac4d665614faa25e267c3fb27fb729ed7
+e91d8d78237de8d7120c320b3645b7100848f24d # only removes code we don't enable
