--- a/series.conf
+++ b/series.conf
@@ -56857,6 +56857,7 @@
 	patches.suse/soc-ti-Fix-reference-imbalance-in-knav_dma_probe.patch
 	patches.suse/drivers-soc-ti-knav_qmss_queue-Fix-error-return-code.patch
 	patches.suse/Revert-powerpc-pseries-hotplug-cpu-Remove-double-fre.patch
+	patches.suse/powerpc-pseries-hibernation-remove-redundant-cachein.patch
 	patches.suse/powerpc-rtas-fix-typo-of-ibm-open-errinjct-in-rtas-f.patch
 	patches.suse/pwm-lp3943-Dynamically-allocate-PWM-chip-base.patch
 	patches.suse/HSI-omap_ssi-Don-t-jump-to-free-ID-in-ssi_add_contro.patch
