--- a/series.conf
+++ b/series.conf
@@ -56856,6 +56856,7 @@
 	patches.suse/soc-ti-knav_qmss-fix-reference-leak-in-knav_queue_pr.patch
 	patches.suse/soc-ti-Fix-reference-imbalance-in-knav_dma_probe.patch
 	patches.suse/drivers-soc-ti-knav_qmss_queue-Fix-error-return-code.patch
+	patches.suse/powerpc-64-Set-up-a-kernel-stack-for-secondaries-bef.patch
 	patches.suse/Revert-powerpc-pseries-hotplug-cpu-Remove-double-fre.patch
 	patches.suse/powerpc-pseries-hibernation-remove-redundant-cachein.patch
 	patches.suse/powerpc-rtas-fix-typo-of-ibm-open-errinjct-in-rtas-f.patch
