--- a/series.conf
+++ b/series.conf
@@ -56858,6 +56858,7 @@
 	patches.suse/drivers-soc-ti-knav_qmss_queue-Fix-error-return-code.patch
 	patches.suse/powerpc-64-Set-up-a-kernel-stack-for-secondaries-bef.patch
 	patches.suse/Revert-powerpc-pseries-hotplug-cpu-Remove-double-fre.patch
+	patches.suse/powerpc-xmon-Change-printk-to-pr_cont.patch
 	patches.suse/powerpc-pseries-hibernation-remove-redundant-cachein.patch
 	patches.suse/powerpc-rtas-fix-typo-of-ibm-open-errinjct-in-rtas-f.patch
 	patches.suse/pwm-lp3943-Dynamically-allocate-PWM-chip-base.patch
