powerpc: Fix incorrect stw{, ux, u, x} instructions in __set_pte_at (bsc#1065729).

--- a/series.conf
+++ b/series.conf
@@ -56859,6 +56859,7 @@
 	patches.suse/powerpc-64-Set-up-a-kernel-stack-for-secondaries-bef.patch
 	patches.suse/Revert-powerpc-pseries-hotplug-cpu-Remove-double-fre.patch
 	patches.suse/powerpc-xmon-Change-printk-to-pr_cont.patch
+	patches.suse/powerpc-Fix-incorrect-stw-ux-u-x-instructions-in-__s.patch
 	patches.suse/powerpc-pseries-hibernation-remove-redundant-cachein.patch
 	patches.suse/powerpc-rtas-fix-typo-of-ibm-open-errinjct-in-rtas-f.patch
 	patches.suse/pwm-lp3943-Dynamically-allocate-PWM-chip-base.patch
