ibmvnic: continue fatal error reset after passive init (bsc#1171078 ltc#184239 git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56869,6 +56869,9 @@
 	patches.suse/kvm-x86-reinstate-vendor-agnostic-check-on-spec_ctrl-cpuid-bits.patch
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
+	# davem/net
+	patches.suse/ibmvnic-continue-fatal-error-reset-after-passive-ini.patch
+
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
 
