--- a/series.conf
+++ b/series.conf
@@ -51517,6 +51517,7 @@
 	patches.suse/0053-amd-xgbe-use-devm_platform_ioremap_resource-to-simpl.patch
 	patches.suse/0003-cirrus-cs89x0-use-devm_platform_ioremap_resource-to-.patch
 	patches.suse/i40e-reduce-stack-usage-in-i40e_set_fc.patch
+	patches.suse/0004-cirrus-cs89x0-remove-set-but-not-used-variable-lp.patch
 	patches.suse/IB-mlx5-Support-MLX5_CMD_OP_QUERY_LAG-as-a-DEVX-gene.patch
 	patches.suse/net-mlx5e-ethtool-Fix-a-typo-in-WOL-function-names.patch
 	patches.suse/tools-bpftool-fix-arguments-for-p_err-in-do_event_pi.patch
