--- a/series.conf
+++ b/series.conf
@@ -51990,6 +51990,7 @@
 	patches.suse/macsec-drop-skb-sk-before-calling-gro_cells_receive.patch
 	patches.suse/openvswitch-change-type-of-UPCALL_PID-attribute-to-N.patch
 	patches.suse/iwlwifi-fw-don-t-send-GEO_TX_POWER_LIMIT-command-to-.patch
+	patches.suse/0005-net-aquantia-Fix-aq_vec_isr_legacy-return-value.patch
 	patches.suse/cxgb4-Signedness-bug-in-init_one.patch
 	patches.suse/net-netsec-Fix-signedness-bug-in-netsec_probe.patch
 	patches.suse/net-socionext-Fix-a-signedness-bug-in-ave_probe.patch
