--- a/series.conf
+++ b/series.conf
@@ -55815,6 +55815,7 @@
 	patches.suse/xfs-fix-inode-allocation-block-res-calculation-prece.patch
 	patches.suse/ocfs2-fix-remounting-needed-after-setfacl-command.patch
 	patches.suse/ocfs2-change-slot-number-type-s16-to-u16.patch
+	patches.suse/ocfs2-fix-unbalanced-locking.patch
 	patches.suse/mm-filemap-clear-idle-flag-for-writes.patch
 	patches.suse/efi-provide-empty-efi_enter_virtual_mode-implementat.patch
 	patches.suse/media-pci-ttpci-av7110-fix-possible-buffer-overflow-.patch
