USB: add RESET_RESUME quirk for Snapscan 1212 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56744,6 +56744,7 @@
 	patches.suse/ASoC-arizona-Fix-a-wrong-free-in-wm8997_probe.patch
 	patches.suse/ASoC-cx2072x-Fix-doubly-definitions-of-Playback-and-.patch
 	patches.suse/usb-chipidea-ci_hdrc_imx-Pass-DISABLE_DEVICE_STREAMI.patch
+	patches.suse/USB-add-RESET_RESUME-quirk-for-Snapscan-1212.patch
 	patches.suse/usb-ehci-omap-Fix-PM-disable-depth-umbalance-in-ehci.patch
 	patches.suse/usb-oxu210hp-hcd-Fix-memory-leak-in-oxu_create.patch
 	patches.suse/USB-serial-digi_acceleport-remove-in_interrupt-usage.patch
