ALSA: hda/generic: Add option to enforce preferred_dacs pairs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56669,6 +56669,7 @@
 	patches.suse/ALSA-hda-realtek-Enable-headset-of-ASUS-UX482EG-B940.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC897.patch
 	patches.suse/ALSA-usb-audio-US16x08-fix-value-count-for-level-met.patch
+	patches.suse/ALSA-hda-generic-Add-option-to-enforce-preferred_dac.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-quirk-to-yet-another-H.patch
 	patches.suse/s390-pci-fix-cpu-address-in-msi-for-directed-irq
 	patches.suse/ibmvnic-avoid-memset-null-scrq-msgs.patch
