--- a/series.conf
+++ b/series.conf
@@ -56699,6 +56699,7 @@
 	patches.suse/usb-gadget-f_fs-Use-local-copy-of-descriptors-for-us.patch
 	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
 	patches.suse/tty-Fix-session-locking.patch
+	patches.suse/cfg80211-initialize-rekey_data.patch
 	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
 	patches.suse/x86-mm-mem_encrypt-fix-definition-of-pmd_flags_dec_wp.patch
