--- a/series.conf
+++ b/series.conf
@@ -56895,6 +56895,7 @@
 	patches.suse/clk-mvebu-a3700-fix-the-XTAL-MODE-pin-to-MPP1_9.patch
 	patches.suse/ACPI-PNP-compare-the-string-length-in-the-matching_i.patch
 	patches.suse/watchdog-sirfsoc-Add-missing-dependency-on-HAS_IOMEM.patch
+	patches.suse/watchdog-qcom-Avoid-context-switch-in-restart-handle.patch
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
 	# davem/net
