--- a/series.conf
+++ b/series.conf
@@ -56898,6 +56898,7 @@
 	patches.suse/watchdog-qcom-Avoid-context-switch-in-restart-handle.patch
 	patches.suse/watchdog-coh901327-add-COMMON_CLK-dependency.patch
 	patches.suse/ALSA-usb-audio-Disable-sample-read-check-if-firmware.patch
+	patches.suse/ALSA-pcm-oss-Fix-a-few-more-UBSAN-fixes.patch
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
 	# davem/net
