--- a/series.conf
+++ b/series.conf
@@ -56893,6 +56893,7 @@
 	patches.suse/clk-s2mps11-Fix-a-resource-leak-in-error-handling-pa.patch
 	patches.suse/clk-sunxi-ng-Make-sure-divider-tables-have-sentinel.patch
 	patches.suse/clk-mvebu-a3700-fix-the-XTAL-MODE-pin-to-MPP1_9.patch
+	patches.suse/ACPI-PNP-compare-the-string-length-in-the-matching_i.patch
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
 	# davem/net
