clk: sunxi-ng: Make sure divider tables have sentinel (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56891,6 +56891,7 @@
 	patches.suse/clk-tegra-Fix-duplicated-SE-clock-entry.patch
 	patches.suse/clk-ti-Fix-memleak-in-ti_fapll_synth_setup.patch
 	patches.suse/clk-s2mps11-Fix-a-resource-leak-in-error-handling-pa.patch
+	patches.suse/clk-sunxi-ng-Make-sure-divider-tables-have-sentinel.patch
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
 	# davem/net
