watchdog: sirfsoc: Add missing dependency on HAS_IOMEM (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56894,6 +56894,7 @@
 	patches.suse/clk-sunxi-ng-Make-sure-divider-tables-have-sentinel.patch
 	patches.suse/clk-mvebu-a3700-fix-the-XTAL-MODE-pin-to-MPP1_9.patch
 	patches.suse/ACPI-PNP-compare-the-string-length-in-the-matching_i.patch
+	patches.suse/watchdog-sirfsoc-Add-missing-dependency-on-HAS_IOMEM.patch
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
 	# davem/net
