ALSA: usb-audio: Disable sample read check if firmware doesn't give back (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56897,6 +56897,7 @@
 	patches.suse/watchdog-sirfsoc-Add-missing-dependency-on-HAS_IOMEM.patch
 	patches.suse/watchdog-qcom-Avoid-context-switch-in-restart-handle.patch
 	patches.suse/watchdog-coh901327-add-COMMON_CLK-dependency.patch
+	patches.suse/ALSA-usb-audio-Disable-sample-read-check-if-firmware.patch
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
 	# davem/net
