--- a/series.conf
+++ b/series.conf
@@ -56888,6 +56888,7 @@
 	patches.suse/power-supply-bq24190_charger-fix-reference-leak.patch
 	patches.suse/rtc-hym8563-enable-wakeup-when-applicable.patch
 	patches.suse/kvm-x86-reinstate-vendor-agnostic-check-on-spec_ctrl-cpuid-bits.patch
+	patches.suse/clk-tegra-Fix-duplicated-SE-clock-entry.patch
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
 	# davem/net
