--- a/series.conf
+++ b/series.conf
@@ -56896,6 +56896,7 @@
 	patches.suse/ACPI-PNP-compare-the-string-length-in-the-matching_i.patch
 	patches.suse/watchdog-sirfsoc-Add-missing-dependency-on-HAS_IOMEM.patch
 	patches.suse/watchdog-qcom-Avoid-context-switch-in-restart-handle.patch
+	patches.suse/watchdog-coh901327-add-COMMON_CLK-dependency.patch
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
 	# davem/net
