--- a/series.conf
+++ b/series.conf
@@ -56889,6 +56889,7 @@
 	patches.suse/rtc-hym8563-enable-wakeup-when-applicable.patch
 	patches.suse/kvm-x86-reinstate-vendor-agnostic-check-on-spec_ctrl-cpuid-bits.patch
 	patches.suse/clk-tegra-Fix-duplicated-SE-clock-entry.patch
+	patches.suse/clk-ti-Fix-memleak-in-ti_fapll_synth_setup.patch
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
 	# davem/net
