ALSA: pcm: oss: Fix potential out-of-bounds shift (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56745,6 +56745,7 @@
 	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-ASUS-Q524UQK-.patch
 	patches.suse/ALSA-usb-audio-Fix-control-access-overflow-errors-fr.patch
 	patches.suse/ALSA-usb-audio-Fix-potential-out-of-bounds-shift.patch
+	patches.suse/ALSA-pcm-oss-Fix-potential-out-of-bounds-shift.patch
 	patches.suse/ASoC-jz4740-i2s-add-missed-checks-for-clk_get.patch
 	patches.suse/ASoC-wm_adsp-remove-ctl-from-list-on-error-in-wm_ads.patch
 	patches.suse/ASoC-pcm-DRAIN-support-reactivation.patch
