ALSA: hda/realtek - Enable headset mic of ASUS Q524UQK with ALC255 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56742,6 +56742,7 @@
 	patches.suse/ALSA-hda-Fix-regressions-on-clear-and-reconfig-sysfs.patch
 	patches.suse/ALSA-hda-ca0132-Fix-AE-5-rear-headphone-pincfg.patch
 	patches.suse/ALSA-hda-ca0132-Change-Input-Source-enum-strings.patch
+	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-ASUS-Q524UQK-.patch
 	patches.suse/ASoC-jz4740-i2s-add-missed-checks-for-clk_get.patch
 	patches.suse/ASoC-wm_adsp-remove-ctl-from-list-on-error-in-wm_ads.patch
 	patches.suse/ASoC-pcm-DRAIN-support-reactivation.patch
