USB: UAS: introduce a quirk to set no_write_same (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56747,6 +56747,7 @@
 	patches.suse/USB-add-RESET_RESUME-quirk-for-Snapscan-1212.patch
 	patches.suse/usb-ehci-omap-Fix-PM-disable-depth-umbalance-in-ehci.patch
 	patches.suse/usb-oxu210hp-hcd-Fix-memory-leak-in-oxu_create.patch
+	patches.suse/USB-UAS-introduce-a-quirk-to-set-no_write_same.patch
 	patches.suse/USB-serial-digi_acceleport-remove-in_interrupt-usage.patch
 	patches.suse/USB-serial-keyspan_pda-fix-dropped-unthrottle-interr.patch
 	patches.suse/USB-serial-keyspan_pda-fix-write-deadlock.patch
