--- a/series.conf
+++ b/series.conf
@@ -56786,6 +56786,7 @@
 	patches.suse/USB-serial-digi_acceleport-fix-write-wakeup-deadlock.patch
 	patches.suse/USB-serial-mos7720-fix-parallel-port-state-restore.patch
 	patches.suse/USB-serial-option-add-interface-number-sanity-check-.patch
+	patches.suse/serial_core-Check-for-port-state-when-tty-is-in-erro.patch
 	patches.suse/serial-8250_omap-Avoid-FIFO-corruption-caused-by-MDR.patch
 	patches.suse/bus-fsl-mc-fix-error-return-code-in-fsl_mc_object_al.patch
 	patches.suse/extcon-max77693-Fix-modalias-string.patch
