--- a/series.conf
+++ b/series.conf
@@ -56651,6 +56651,7 @@
 	patches.suse/usbnet-ipheth-fix-connectivity-with-iOS-14.patch
 	patches.suse/ibmvnic-fix-call_netdevice_notifiers-in-do_reset.patch
 	patches.suse/ibmvnic-notify-peers-when-failover-and-migration-hap.patch
+	patches.suse/iwlwifi-pcie-limit-memory-read-spin-time.patch
 	patches.suse/nfc-s3fwrn5-use-signed-integer-for-parsing-GPIO-numb.patch
 	patches.suse/net-ena-handle-bad-request-id-in-ena_netdev.patch
 	patches.suse/net-ena-fix-packet-s-addresses-for-rx_offset-feature.patch
