--- a/series.conf
+++ b/series.conf
@@ -56639,6 +56639,7 @@
 	patches.suse/efivarfs-fix-memory-leak-in-efivarfs_create.patch
 	patches.suse/efi-x86-free-efi_pgd-with-free_pages.patch
 	patches.suse/msft-hv-2172-video-hyperv_fb-Fix-the-cache-type-when-mapping-the-.patch
+	patches.suse/platform-x86-acer-wmi-add-automatic-keyboard-backgro.patch
 	patches.suse/platform-x86-toshiba_acpi-Fix-the-wrong-variable-ass.patch
 	patches.suse/IB-mthca-fix-return-value-of-error-branch-in-mthca_i.patch
 	patches.suse/btrfs-qgroup-don-t-commit-transaction-when-we-alread.patch
