iio:imu:bmi160: Fix too large a buffer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56791,6 +56791,7 @@
 	patches.suse/bus-fsl-mc-fix-error-return-code-in-fsl_mc_object_al.patch
 	patches.suse/extcon-max77693-Fix-modalias-string.patch
 	patches.suse/iio-buffer-Fix-demux-update.patch
+	patches.suse/iio-imu-bmi160-Fix-too-large-a-buffer.patch
 	patches.suse/iio-pressure-mpl3115-Force-alignment-of-buffer.patch
 	patches.suse/iio-adc-rockchip_saradc-fix-missing-clk_disable_unpr.patch
 	patches.suse/staging-comedi-mf6x4-Fix-AI-end-of-conversion-detect.patch
