ALSA: hda: Fix potential race in unsol event handler (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55092,6 +55092,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-unused-variable-warning-w-o-CON.patch
 	patches.suse/ALSA-isa-wavefront-prevent-out-of-bounds-write-in-io.patch
 	patches.suse/ALSA-usb-audio-Add-duplex-sound-support-for-USB-devi.patch
+	patches.suse/ALSA-hda-Fix-potential-race-in-unsol-event-handler.patch
 	patches.suse/ALSA-usb-audio-Clean-up-quirk-entries-with-macros.patch
 	patches.suse/ALSA-hda-Add-ElkhartLake-HDMI-codec-vid.patch
 	patches.suse/ALSA-usb-audio-Add-Pioneer-DJ-DJM-900NXS2-support.patch
