ASoC: rt5677: Mark reg RT5677_PWR_ANLG2 as volatile (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52668,6 +52668,7 @@
 	patches.suse/ALSA-hda-hdmi-Clear-codec-relaxed_resume-flag-at-unb.patch
 	patches.suse/ASoC-Jack-Fix-NULL-pointer-dereference-in-snd_soc_ja.patch
 	patches.suse/ASoC-wm8904-fix-regcache-handling.patch
+	patches.suse/ASoC-rt5677-Mark-reg-RT5677_PWR_ANLG2-as-volatile.patch
 	patches.suse/ALSA-hda-realtek-Enable-internal-speaker-of-ASUS-UX4.patch
 	patches.suse/ALSA-usb-audio-Fix-Focusrite-Scarlett-6i6-gen1-input.patch
 	patches.suse/media-vivid-Set-vid_cap_streaming-and-vid_out_stream.patch
