ALSA: usb-audio: Add delay quirk for all Logitech USB devices (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56661,6 +56661,7 @@
 	patches.suse/ALSA-hda-realtek-Add-some-Clove-SSID-in-the-ALC293-A.patch
 	patches.suse/ALSA-ctl-fix-error-path-at-adding-user-defined-eleme.patch
 	patches.suse/ALSA-firewire-Clean-up-a-locking-issue-in-copy_resp_.patch
+	patches.suse/ALSA-usb-audio-Add-delay-quirk-for-all-Logitech-USB-.patch
 	patches.suse/ALSA-mixart-Fix-mutex-deadlock.patch
 	patches.suse/ASoC-qcom-lpass-platform-Fix-memory-leak.patch
 	patches.suse/s390-dasd-fix-null-pointer-dereference-for-erp-requests
