ALSA: usb-audio: Add implicit feedback quirk for Zoom UAC-2 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56598,6 +56598,7 @@
 	patches.suse/can-peak_canfd-pucan_handle_can_rx-fix-echo-manageme.patch
 	patches.suse/drm-imx-tve-remove-extraneous-type-qualifier.patch
 	patches.suse/Fonts-Replace-discarded-const-qualifier.patch
+	patches.suse/ALSA-usb-audio-Add-implicit-feedback-quirk-for-Zoom-.patch
 	patches.suse/ALSA-hda-prevent-undefined-shift-in-snd_hdac_ext_bus.patch
 	patches.suse/ceph-check-session-state-after-bumping-session-s_seq.patch
 	patches.suse/futex-Handle-transient-ownerless-rtmutex-state-corre.patch
