ALSA: usb-audio: Add registration quirk for Kingston HyperX Cloud Flight S (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55310,6 +55310,7 @@
 	patches.suse/ALSA-usb-audio-add-quirk-for-Denon-DCD-1500RE.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-MSI-GE63-laptop.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-and-micmute-LED-suppor.patch
+	patches.suse/0010-ALSA-usb-audio-Add-registration-quirk-for-Kingston-H.patch
 	patches.suse/RDMA-efa-Set-maximum-pkeys-device-attribute.patch
 	patches.suse/RDMA-qedr-Fix-KASAN-use-after-free-in-ucma_event_han.patch
 	patches.suse/RDMA-cma-Protect-bind_list-and-listen_list-while-fin.patch
