ALSA: usb-audio: Fix race against the error recovery URB submission (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55454,6 +55454,7 @@
 	patches.suse/intel_th-Fix-a-NULL-dereference-when-hub-driver-is-n.patch
 	patches.suse/virtio-virtio_console-add-missing-MODULE_DEVICE_TABL.patch
 	patches.suse/ALSA-line6-Perform-sanity-check-for-each-URB-creatio.patch
+	patches.suse/ALSA-usb-audio-Fix-race-against-the-error-recovery-U.patch
 	patches.suse/ALSA-hda-realtek-change-to-suitable-link-model-for-A.patch
 	patches.suse/ALSA-hda-realtek-enable-headset-mic-of-ASUS-ROG-Zeph.patch
 	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-Acer-TravelMa.patch
