ALSA: usb-audio: add quirk for Denon DCD-1500RE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55307,6 +55307,7 @@
 	patches.suse/btrfs-fix-RWF_NOWAIT-write-not-failling-when-we-need.patch
 	patches.suse/btrfs-fix-RWF_NOWAIT-writes-blocking-on-extent-locks.patch
 	patches.suse/ALSA-hda-Add-NVIDIA-codec-IDs-9a-9d-through-a0-to-pa.patch
+	patches.suse/ALSA-usb-audio-add-quirk-for-Denon-DCD-1500RE.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-MSI-GE63-laptop.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-and-micmute-LED-suppor.patch
 	patches.suse/RDMA-efa-Set-maximum-pkeys-device-attribute.patch
