ath10k: fix get invalid tx rate for Mesh metric (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52619,6 +52619,7 @@
 	patches.suse/rtlwifi-rtl8192de-Fix-missing-code-to-retrieve-RX-bu.patch
 	patches.suse/0001-rtlwifi-rtl8192de-Fix-missing-callback-that-tests-fo.patch
 	patches.suse/rtlwifi-rtl8192de-Fix-missing-enable-interrupt-flag.patch
+	patches.suse/ath10k-fix-get-invalid-tx-rate-for-Mesh-metric.patch
 	patches.suse/bpf-skmsg-fix-potential-psock-NULL-pointer-dereferen.patch
 	patches.suse/mac80211-consider-QoS-Null-frames-for-STA_NULLFUNC_A.patch
 	patches.suse/ice-fix-stack-leakage.patch
