ACPICA: Disassembler: create buffer fields in ACPI_PARSE_LOAD_PASS1 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53444,6 +53444,7 @@
 	patches.suse/PM-devfreq-rk3399_dmc-Add-missing-of_node_put.patch
 	patches.suse/PM-devfreq-rk3399_dmc-Disable-devfreq-event-device-w.patch
 	patches.suse/apei-ghes-Do-not-delay-GHES-polling.patch
+	patches.suse/ACPICA-Disassembler-create-buffer-fields-in-ACPI_PAR.patch
 	patches.suse/ACPI-video-Do-not-export-a-non-working-backlight-int.patch
 	patches.suse/ACPI-EC-Reference-count-query-handlers-under-lock.patch
 	patches.suse/0087-md-bitmap-small-cleanups.patch
