ALSA: timer: Limit max amount of slave instances (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52651,6 +52651,7 @@
 	patches.suse/ALSA-usb-audio-sound-usb-usb-true-false-for-bool-ret.patch
 	patches.suse/ALSA-firewire-motu-Correct-a-typo-in-the-clock-proc-.patch
 	patches.suse/ALSA-6fire-Drop-the-dead-code.patch
+	patches.suse/ALSA-timer-Limit-max-amount-of-slave-instances.patch
 	patches.suse/ASoC-kirkwood-fix-IRQ-error-handling.patch
 	patches.suse/ASoC-pcm-update-FE-BE-trigger-order-based-on-the-com.patch
 	patches.suse/ALSA-pcm-Yet-another-missing-check-of-non-cached-buf.patch
