ALSA: usb-audio: add usb vendor id as DSD-capable for Khadas devices (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56600,6 +56600,7 @@
 	patches.suse/Fonts-Replace-discarded-const-qualifier.patch
 	patches.suse/ALSA-usb-audio-Add-implicit-feedback-quirk-for-Zoom-.patch
 	patches.suse/ALSA-hda-prevent-undefined-shift-in-snd_hdac_ext_bus.patch
+	patches.suse/ALSA-usb-audio-add-usb-vendor-id-as-DSD-capable-for-.patch
 	patches.suse/ceph-check-session-state-after-bumping-session-s_seq.patch
 	patches.suse/futex-Handle-transient-ownerless-rtmutex-state-corre.patch
 	patches.suse/perf-core-fix-a-memory-leak-in-perf_event_parse_addr_filter.patch
