ALSA: usb-audio: Add registration quirk for Kingston HyperX Cloud Alpha S (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54599,6 +54599,7 @@
 	patches.suse/scsi-lpfc-Change-default-SCSI-LUN-QD-to-64.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Lenovo-Carbon-X1-8th-.patch
 	patches.suse/ALSA-pcm-oss-Fix-regression-by-buffer-overflow-fix.patch
+	patches.suse/ALSA-usb-audio-Add-registration-quirk-for-Kingston-H.patch
 	patches.suse/ALSA-hda-realtek-Add-supported-new-mute-Led-for-HP.patch
 	patches.suse/ALSA-hda-realtek-Add-HP-new-mute-led-supported-for-A.patch
 	patches.suse/ALSA-hda-Fix-potential-access-overflow-in-beep-helpe.patch
