ASoC: sti: fix possible sleep-in-atomic (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53337,6 +53337,7 @@
 	patches.suse/ALSA-usb-audio-fix-sync-ep-altsetting-sanity-check.patch
 	patches.suse/ALSA-seq-Fix-racy-access-for-queue-timer-in-proc-rea.patch
 	patches.suse/ASoC-msm8916-wcd-analog-Fix-selected-events-for-MIC-.patch
+	patches.suse/ASoC-sti-fix-possible-sleep-in-atomic.patch
 	patches.suse/ASoC-msm8916-wcd-digital-Reset-RX-interpolation-path.patch
 	patches.suse/btrfs-rework-arguments-of-btrfs_unlink_subvol.patch
 	patches.suse/btrfs-fix-invalid-removal-of-root-ref.patch
