ASoC: wm_adsp: Don't generate kcontrols without READ flags (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52207,6 +52207,7 @@
 	patches.suse/Btrfs-check-for-the-full-sync-flag-while-holding-the.patch
 	patches.suse/edac-ghes-fix-use-after-free-in-ghes_edac-remove-path.patch
 	patches.suse/ALSA-hda-realtek-Add-support-for-ALC711.patch
+	patches.suse/ASoC-wm_adsp-Don-t-generate-kcontrols-without-READ-f.patch
 	patches.suse/ASoc-rockchip-i2s-Fix-RPM-imbalance.patch
 	patches.suse/ASoC-rsnd-Reinitialize-bit-clock-inversion-flag-for-.patch
 	patches.suse/ALSA-usb-audio-Fix-copy-paste-error-in-the-validator.patch
