ASoC: fsl_asrc_dma: Fix dma_chan leak when config DMA channel failed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55095,6 +55095,7 @@
 	patches.suse/ALSA-hda-Fix-potential-race-in-unsol-event-handler.patch
 	patches.suse/ALSA-usb-audio-Clean-up-quirk-entries-with-macros.patch
 	patches.suse/ALSA-hda-Add-ElkhartLake-HDMI-codec-vid.patch
+	patches.suse/ASoC-fsl_asrc_dma-Fix-dma_chan-leak-when-config-DMA-.patch
 	patches.suse/ALSA-usb-audio-Add-Pioneer-DJ-DJM-900NXS2-support.patch
 	patches.suse/ALSA-hda-add-sienna_cichlid-audio-asic-id-for-sienna.patch
 	patches.suse/ALSA-es1688-Add-the-missed-snd_card_free.patch
