ALSA: ctl: allow TLV read operation for callback type of element in locked case (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53545,6 +53545,7 @@
 	patches.suse/ar5523-Add-USB-ID-of-SMCWUSBT-G2-wireless-adapter.patch
 	patches.suse/ALSA-control-remove-useless-assignment-in-.info-call.patch
 	patches.suse/ALSA-usx2y-Adjust-indentation-in-snd_usX2Y_hwdep_dsp.patch
+	patches.suse/ALSA-ctl-allow-TLV-read-operation-for-callback-type-.patch
 	patches.suse/ALSA-usb-audio-fix-Corsair-Virtuoso-mixer-label-coll.patch
 	patches.suse/ALSA-hda-constify-copied-structure.patch
 	patches.suse/ALSA-hda-Constify-snd_kcontrol_new-items.patch
